# snaike

./: .gitignore  Makefile.am  activation.c  activation.h  board.c  board.h  configure.ac  draw.c  draw.h  food.c  food.h  human.c  main.c  normalization.c  normalization.h  snake.c  snake.h
neat/: crossover.c  crossover.h  genome.h  mutation.c  mutation.h  neat.c
